--- a/order-pizza.html
+++ b/order-pizza.html
@@ -29,7 +29,7 @@
                     <li>
                         <form class="form-inline my-2 my-lg-0">
                             <input class="form-control mr-sm-2" type="search" placeholder="Zipcode" aria-label="Search">
-                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search stores near you!</button>
+                            <a href="#" class="nav-button">Search stores near you!</a>
                         </form>
                     </li>
                 </ul>
