--- a/bootstrap-practice.html
+++ b/bootstrap-practice.html
@@ -25,6 +25,12 @@
                 <div class="col"><i class="fas fa-user"></i></div>
             </div>
         </div>
+
+        <div class="container2">
+            <div class="row row-2 text-center">
+                <div class="col">Contact me</div>
+            </div>
+        </div>
         <!-- Main page content -->
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
