morning-warmup area

--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -28,42 +28,49 @@
     //write a function that returns the string "Hi"
     function sayHi() {
         return "Hi";
-
-        console.log(sayHi());
     }
+        console.log(sayHi());
+
     //write a javascript function that returns hello plus a name
     function sayHello(name) {
         return "Hello " + name + "!";
-
-        console.log(sayHello("Chris"));
     }
+        console.log(sayHello("Chris"));
+
     //write a javascript function that returns the first item of an array
     function firstItem(arr) {
         return arr[0];
-
-        console.log(arr(["one", "two", "three", "four"]));
     }
+        console.log(arr(["one", "two", "three", "four"]));
+
 
     //function to find an area of an equilateral triangle
 
     function equilateralTriangleArea(num) {
         return triangleArea(num,num,num);
-
+    }
         console.log(equilateralTriangleArea(3));
         console.log(triangleArea(3,3,3));
 
-    }
+
     //write a javascript function that concatenates three strings and returns the output
     function addStrings(a, b, c) {
         return (a + b + c);
-
-        console.log(addString("one", "two", "three"));
     }
+        console.log(addString("one", "two", "three"));
+
     //write a javascript function that takes in a string and returns that string with all the characters uppercase
     function upperCase(str) {
         return str.toUpperCase()
 
-        console.log(upperCase(string));
+    }
+
+    console.log(upperCase(string));
+    //write a function that returns the area of a circle when passed the diameter
+
+    function areaOfCircle(diam) {
+        var rad = (diam / 2);
+        return Math.PI * (rad * rad);
     }
 </script>
 <h1>Deimos</h1>
