--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -72,6 +72,12 @@
         var rad = (diam / 2);
         return Math.PI * (rad * rad);
     }
+
+    function perimeterOfQuadrilateral(a,b,c,d) {
+        return a + b + c + d;
+    }
+
+    console.log(perimeterOfQuadrilateral(3, 2, 5, 7));
 </script>
 <h1>Deimos</h1>
 <p>These are my morning warmups:</p>
