--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -78,6 +78,11 @@
     }
 
     console.log(perimeterOfQuadrilateral(3, 2, 5, 7));
+    //write a function that returns the type of argument that was passed in
+    function checkType(x) {
+        return typeof (x);
+    }
+
 </script>
 <h1>Deimos</h1>
 <p>These are my morning warmups:</p>
