--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -78,10 +78,22 @@
     }
 
     console.log(perimeterOfQuadrilateral(3, 2, 5, 7));
+
     //write a function that returns the type of argument that was passed in
     function checkType(x) {
         return typeof (x);
     }
+
+    //write a javascript function returns true only when passed a positive, even number.
+    function posEven(num) {
+        if (num % 2 === 0 && num > 0) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+    console.log(posEven(3));
 
 </script>
 <h1>Deimos</h1>
