--- a/functions_js.html
+++ b/functions_js.html
@@ -5,6 +5,7 @@
     <title>Functions with JS</title>
 </head>
 <body>
+<h1>JavaScript Exercises</h1>
 <script src="js/functions.js"></script>
 
 </body>
