--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -18,9 +18,8 @@
         //this variable stores half the perimeter
         var half = (a+b+c)/2;
         //the area is the square root of this
-        var area = Math.sqrt (half * (half-a) * (half-b) * (half-c));
         //function returns the area
-        return area;
+        return Math.sqrt(half * (half - a) * (half - b) * (half - c));
     }
     //console log to see the result
     console.log(triangleArea(5, 6, 7));
@@ -84,13 +83,11 @@
         return typeof (x);
     }
 
+    console.log(checkType());
+
     //write a javascript function returns true only when passed a positive, even number.
     function posEven(num) {
-        if (num % 2 === 0 && num > 0) {
-            return true;
-        } else {
-            return false;
-        }
+        return num % 2 === 0 && num > 0;
     }
 
     console.log(posEven(3));
