--- a/inline_js.html
+++ b/inline_js.html
@@ -4,6 +4,7 @@
         <title>Inline JS</title>
     </head>
     <body>
+    <h1>Inline JS</h1>
     <script>
         console.log("Hello for inline JavaScript!");
     </script>
