personal website progress

--- a/My-Webpage.html
+++ b/My-Webpage.html
@@ -22,32 +22,47 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="welcome.html">About Me</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
-        <h1 class="text-center">About me!</h1>
+        <h1 class="text-center">Christopher Aguirre</h1>
         <hr class="style-eight">
-        <h3 class="text-center">Christopher Aguirre</h3>
+    <div id="slider">
+        <div class="container">
+            <div class="slide">
+                <h3>Slide 1</h3>
+                <p>
+                    Hi there, My name is Christopher Aguirre. I'm and aspiring web developer with a business before pleasure mindset.
+                </p>
+            </div>
+            <div class="slide">
+                <h3>Slide 2</h3>
+                <p>
+                    I'm here to put my best foot forward and help you push your online presence to another level.
+                </p>
+            </div>
+            <div class="slide">
+                <h3>Slide 3</h3>
+                <p>
+                    Her birthday calculates past a juice! The envy succeeds across an evident jelly. An afternoon shifts opposite a bust. The tired clash divides a widest sneak. The satire springs onto a misfortune after the inclined car.
+                </p>
+            </div>
+            <div class="slide">
+                <h3>Slide 4</h3>
+                <p>
+                    A distributed actor pilots the null pencil. The wild wolfs a damp cage inside the breach. The blank toes the line underneath the arc. The sheep migrates within the transcript.
+                </p>
+            </div>
+            <div class="slide">
+                <h3>Slide 5</h3>
+                <p>
+                    The suspected book hums opposite the unacceptable urge. The warning goodbye searches the substitute. This damp loses before the president. The slave elects the north inside an exciting salt.
+                </p>
+            </div>
+        </div>
+    </div>
 
 
         <!-- Main page content -->
