my webpage progress

--- a/My-Webpage.html
+++ b/My-Webpage.html
@@ -32,27 +32,28 @@
     <div id="slider">
         <div class="container">
             <div class="slide">
-                <h3>Slide 1</h3>
+                <h3>About me</h3>
                 <p>
                     Hi there, My name is Christopher Aguirre. I'm and aspiring web developer with a business before pleasure mindset.
                 </p>
             </div>
             <div class="slide">
-                <h3>Slide 2</h3>
                 <p>
-                    I'm here to put my best foot forward and help you push your online presence to another level.
+                    I was an enlisted soldier in the U.S Army for 4 years. Two of those years were spent fixing small arms and artillery, so I know
+                    that even the tiniest details matter when it comes to functioning and operational equipment.
                 </p>
             </div>
             <div class="slide">
-                <h3>Slide 3</h3>
                 <p>
-                    Her birthday calculates past a juice! The envy succeeds across an evident jelly. An afternoon shifts opposite a bust. The tired clash divides a widest sneak. The satire springs onto a misfortune after the inclined car.
+                    The ladder half of my contract was in an office working with personnel and minor things on the computer like spreadsheets
+                    and inputting data into a data base for new soldiers and officers who came to the unit. Naturally I took interest in the magic
+                    that happens behind the screens and what made things tick in technology.
                 </p>
             </div>
             <div class="slide">
-                <h3>Slide 4</h3>
+                <h3>My Motivators</h3>
                 <p>
-                    A distributed actor pilots the null pencil. The wild wolfs a damp cage inside the breach. The blank toes the line underneath the arc. The sheep migrates within the transcript.
+
                 </p>
             </div>
             <div class="slide">
@@ -73,3 +74,13 @@
         <!-- Your custom JS goes here -->
     </body>
 </html>
+
+
+<!--write a function addOne that takes in a number or numerical string and adds one-->
+<!--return parseFloat(input) + 1-->
+
+<!--isEven-->
+<!--return parseFloat(input) % 2 === 0-->
+
+<!--concat-->
+<!---->
