my webpage progress

--- a/My-Webpage.html
+++ b/My-Webpage.html
@@ -34,7 +34,7 @@
             <div class="slide">
                 <h3>About me</h3>
                 <p>
-                    Hi there, My name is Christopher Aguirre. I'm and aspiring web developer with a business before pleasure mindset.
+                    Hi there, My name is Christopher Aguirre. I'm an aspiring web developer with a business before pleasure mindset.
                 </p>
             </div>
             <div class="slide">
