loops exercise 15 oct.

--- a/loops-practice.html
+++ b/loops-practice.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Loops JS</title>
+    <title>Loops practice</title>
 </head>
 <body>
-<script src="js/for-loops.js"></script>
+<script src="js/loops-practice.js"></script>
 </body>
 </html>
