--- a/intro-to-arrays-lec.html
+++ b/intro-to-arrays-lec.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<script src="js/intro-to-arrays-lec.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Intro to Arrays Lecture</title>
+    </head>
+    <body>
+        <script src="js/intro-to-arrays-lec.js"></script>
+        <h1>Welcome to Arrays</h1>
+    </body>
 </html>
