--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -44,14 +44,17 @@
         var listItems = document.getElementsByTagName("li");
 
         // TODO: Set text color on every other list item to grey
+        listItems[1].style.color = "grey";
+        listItems[3].style.color = "grey";
 
         // TODO: Set text color of li with dbid = 1 to blue
+        listItems[0].style.color = "blue";
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
         var subParagraphs = document.getElementsByClassName("sub-paragraph");
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs.innerHTML = "Mission Accomplished!";
+        subParagraphs[0].innerText = "Mission Accomplished!";
     })();
 </script>
 </body>
