--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -40,17 +40,17 @@
         draggable: true
     };
 
-    var marker = new mapboxgl.Marker(markerOptions)
-        .setLngLat([-98.478223, 29.424707])
-        .addTo(map);
-
-    var marker2 = new mapboxgl.Marker(markerOptions)
-        .setLngLat([-98.49271, 29.425338])
-        .addTo(map);
-
-    var marker3 = new mapboxgl.Marker(markerOptions)
-        .setLngLat([-98.485352, 29.423618])
-        .addTo(map);
+    // var marker = new mapboxgl.Marker(markerOptions)
+    //     .setLngLat([])
+    //     .addTo(map);
+    //
+    // var marker2 = new mapboxgl.Marker(markerOptions)
+    //     .setLngLat([-98.49271, 29.425338])
+    //     .addTo(map);
+    //
+    // var marker3 = new mapboxgl.Marker(markerOptions)
+    //     .setLngLat([-98.485352, 29.423618])
+    //     .addTo(map);
 
     function geocode(search, token) {
         var baseUrl = 'https://api.mapbox.com';
@@ -64,42 +64,88 @@
             });
     }
 
-    geocode("1226 E Houston St, San Antonio, TX 78205", mapboxToken).then(function (result) {
-        console.log(result);
-        // map.setCenter(result);
-        // map.setZoom(15);
-    });
-    geocode("110 Soledad St, San Antonio, TX 78205", mapboxToken).then(function (result) {
-        console.log(result);
-        // map.setCenter(result);
-        // map.setZoom(15);
-    });
-    geocode("849 E Commerce St, San Antonio, TX 78205", mapboxToken).then(function (result) {
-        console.log(result);
-        // map.setCenter(result);
-        // map.setZoom(15);
-    });
-
-    var spaghettiPopup = new mapboxgl.Popup()
-        .setLngLat([-98.478223, 29.424707])
-        .setHTML("<em>Spaghetti Warehouse!!</em>")
-        .addTo(map);
-
-    var manhattanPopup = new mapboxgl.Popup()
-        .setLngLat([-98.49271, 29.425338])
-        .setHTML("<em>Mexican Manhattan!!</em>")
-        .addTo(map);
-
-    var mallPopup = new mapboxgl.Popup()
-        .setLngLat([-98.485352, 29.423618])
-        .setHTML("<em>RiverCenter Mall!!</em>")
-        .addTo(map);
-
-    marker.setPopup(spaghettiPopup,manhattanPopup,mallPopup);
-
-    marker2.setPopup(manhattanPopup);
+    // geocode("1226 E Houston St, San Antonio, TX 78205", mapboxToken).then(function (result) {
     //
-    marker3.setPopup(mallPopup);
+    // });
+    // geocode("110 Soledad St, San Antonio, TX 78205", mapboxToken).then(function (result) {
+    //     console.log(result);
+    //     // map.setCenter(result);
+    //     // map.setZoom(15);
+    // });
+    // geocode("849 E Commerce St, San Antonio, TX 78205", mapboxToken).then(function (result) {
+    //     console.log(result);
+    //     // map.setCenter(result);
+    //     // map.setZoom(15);
+    // });
+    //
+    // var spaghettiPopup = new mapboxgl.Popup()
+    //     .setLngLat([-98.478223, 29.424707])
+    //     .setHTML("<em>Spaghetti Warehouse!!</em>")
+    //     .addTo(map);
+    //
+    // var manhattanPopup = new mapboxgl.Popup()
+    //     .setLngLat([-98.49271, 29.425338])
+    //     .setHTML("<em>Mexican Manhattan!!</em>")
+    //     .addTo(map);
+    //
+    // var mallPopup = new mapboxgl.Popup()
+    //     .setLngLat([-98.485352, 29.423618])
+    //     .setHTML("<em>RiverCenter Mall!!</em>")
+    //     .addTo(map);
+    //
+    // marker.setPopup(spaghettiPopup,manhattanPopup,mallPopup);
+    //
+    // marker2.setPopup(manhattanPopup);
+    //
+    // marker3.setPopup(mallPopup);
+
+    var restaurants = [
+        {
+            name: "Spaghetti Warehouse",
+            location: "1226 E Houston St, San Antonio, TX 78205",
+            description: "It's a good spaghetti!"
+        },
+        {
+            name: "Mexican Manhattan",
+            location: "110 Soledad St, San Antonio, TX 78205",
+            description: "Lovely margaritas!"
+        },
+        {
+            name: "River Center Mall",
+            location: "849 E Commerce St, San Antonio, TX 78205",
+            description: "The food court is pretty diverse."
+        }
+    ];
+
+
+    restaurants.forEach(function (restaurant,index) {
+        geocode(restaurant.location, mapboxToken).then(function (result) {
+
+
+            var pops = new mapboxgl.Popup()
+                .setLngLat(result)
+                .setHTML("<em><h2>"+restaurant.name+"</em></h2>" + "<br>" + restaurant.location + "<br>" + restaurant.description)
+                .addTo(map);
+            var marker = new mapboxgl.Marker(markerOptions)
+            .setLngLat(result)
+            .setPopup(pops)
+            .togglePopup()
+            .addTo(map);
+        console.log("This is " + index + " foods!");
+    });
+    });
+
+
+
+
+
+
+    // geocode(" ", mapboxToken).then(function (result) {
+    //     console.log(result);
+    //     // map.setCenter(result);
+    //     // map.setZoom(15);
+    // });
+
 </script>
 <!--<script src="js/mapbox-geocoder-utils.js"></script>-->
 <!--<script src="js/mapbox-api-lec.js"></script>-->
