--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -25,9 +25,12 @@
 
 
     $(document).ready(function () {
-        $('.codeup').css('border', '1px dotted red');
         $('*').css('text-align', 'center');
         $('li').css('list-style', 'none');
+        $('li').css('font-size', '20px');
+        $('h1, p, li').css('background-color', 'yellow');
+        var contents = $('h1').html();
+        alert(contents);
 
 
     });
