--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -7,8 +7,16 @@
         .invisible {
             visibility: hidden;
         }
+
         .highlight {
             background-color: #74AD46;
+        }
+
+        .bolden {
+            font-weight: bold;
+        }
+        .blue {
+            color: #3B94D9;
         }
     </style>
 </head>
@@ -22,31 +30,77 @@
     <dd>David Vela is the Deputy Director, exercising the authority of the Director of the National Park Service.</dd>
     <br>
     <dt>What government agency oversees the National Park Service?</dt>
-    <dd>The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is the department's Assistant Secretary for Fish, Wildlife and Parks.</dd>
+    <dd>The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is
+        the department's Assistant Secretary for Fish, Wildlife and Parks.
+    </dd>
     <br>
     <dt>How many employees are in the National Park Service?</dt>
     <dd>Permanent, temporary, and seasonal employees: More than 20,000 and Volunteers: More than 315,000 in 2017</dd>
     <br>
     <dt>How old is the National Park System?</dt>
-    <dd>The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916. Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as the nation's first national park. View the National Park System timeline.</dd>
+    <dd>The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916.
+        Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as
+        the nation's first national park. View the National Park System timeline.
+    </dd>
     <br>
     <dt>What is the origin of the National Park Service arrowhead?</dt>
-    <dd>The arrowhead was authorized as the official National Park Service emblem by the Secretary of the Interior on July 20, 1951. The components of the arrowhead may have been inspired by key attributes of the National Park System, with the sequoia tree and bison representing vegetation and wildlife, the mountains and water representing scenic and recreational values, and the arrowhead itself representing historical and archeological values. Read more about the history of the arrowhead and other elements of NPS visual design.</dd>
+    <dd>The arrowhead was authorized as the official National Park Service emblem by the Secretary of the Interior on
+        July 20, 1951. The components of the arrowhead may have been inspired by key attributes of the National Park
+        System, with the sequoia tree and bison representing vegetation and wildlife, the mountains and water
+        representing scenic and recreational values, and the arrowhead itself representing historical and archeological
+        values. Read more about the history of the arrowhead and other elements of NPS visual design.
+    </dd>
     <br>
     <dt>How many areas are in the National Park System?</dt>
-    <dd>The system includes 419 areas covering more than 85 million acres in every state, the District of Columbia, American Samoa, Guam, Puerto Rico, and the Virgin Islands. These areas include national parks, monuments, battlefields, military parks, historical parks, historic sites, lakeshores, seashores, recreation areas, scenic rivers and trails, and the White House. Learn more about national park designations. See the complete list of National Park Service units and affiliated areas by type and number.</dd>
+    <dd>The system includes 419 areas covering more than 85 million acres in every state, the District of Columbia,
+        American Samoa, Guam, Puerto Rico, and the Virgin Islands. These areas include national parks, monuments,
+        battlefields, military parks, historical parks, historic sites, lakeshores, seashores, recreation areas, scenic
+        rivers and trails, and the White House. Learn more about national park designations. See the complete list of
+        National Park Service units and affiliated areas by type and number.
+    </dd>
     <br>
     <dt>What is the largest national park site? Smallest?</dt>
-    <dd>Largest: Wrangell-St. Elias National Park and Preserve, AK, at 13.2 million acres and The Smallest: Thaddeus Kosciuszko National Memorial, PA, at 0.02 acres</dd>
+    <dd>Largest: Wrangell-St. Elias National Park and Preserve, AK, at 13.2 million acres and The Smallest: Thaddeus
+        Kosciuszko National Memorial, PA, at 0.02 acres
+    </dd>
     <br>
     <dt>How many people visit the national parks?</dt>
     <dd>Total recreation visitors to the national parks in 2018: 318,211,833.</dd>
     <br>
     <dt>Can I bring my pet to a national park?</dt>
-    <dd>Some national parks welcome pets—in developed areas, on many trails and campgrounds, and in some lodging facilities. Learn more about pets in parks.</dd>
+    <dd>Some national parks welcome pets—in developed areas, on many trails and campgrounds, and in some lodging
+        facilities. Learn more about pets in parks.
+    </dd>
 </dl>
 <br>
-<p>Click for Answers</p>
+<button type="button">Click for Answers</button>
+<br>
+
+<h3>Yosemite National Park</h3>
+<ul>
+    <li>Established‎: ‎October 1, 1890</li>
+    <li>Nearest city‎: ‎Mariposa, California</li>
+    <li>Yosemite National Park is in California’s Sierra Nevada mountains.</li>
+    <li>It’s famed for its giant, ancient sequoia trees, and for Tunnel View, the iconic vista of towering Bridalveil
+        Fall and the granite cliffs of El Capitan and Half Dome
+    </li>
+</ul>
+<h3>Zion National Park</h3>
+<ul>
+    <li>Established‎: ‎November 19, 1919</li>
+    <li>Zion National Park is a southwest Utah nature preserve distinguished by Zion Canyon’s steep red cliffs</li>
+    <li>Zion Canyon Scenic Drive cuts through its main section, leading to forest trails along the Virgin River.</li>
+    <li>The river flows to the Emerald Pools, which have waterfalls and a hanging garden.</li>
+</ul>
+<h3>Yellowstone National Park</h3>
+<ul>
+    <li>Established‎: ‎March 1, 1872</li>
+    <li>Governing body‎: ‎U.S. National Park Service</li>
+    <li>Yellowstone National Park is a nearly 3,500-sq.-mile wilderness recreation area atop a volcanic hot spot.</li>
+    <li>Mostly in Wyoming, the park spreads into parts of Montana and Idaho too.</li>
+</ul>
+
+<button id='highlighter' type="button">Click Me</button>
 
 
 <script src="js/jquery-2.2.4.js"></script>
@@ -58,7 +112,7 @@
 
     $('dd').addClass('invisible');
 
-    $('p').click(function(event) {
+    $('p').click(function (event) {
         $('dd').toggleClass('invisible');
 
     });
@@ -67,7 +121,30 @@
         $(this).toggleClass('highlight');
     });
 
+    $('#highlighter').click(function () {
+        $('ul').each(function (event) {
+            $(this).children().last().toggleClass('highlight');
+        });
+    });
 
+
+    $('h3').click(function () {
+        $(this).next().children().toggleClass('bolden');
+    });
+
+    // When any list item is clicked, first li of the parent ul should have a font color of blue.
+
+    $('li').click(function () {
+        $(this).parent().children().first().toggleClass('blue');
+    });
+
+    // Create 3 divs that each look like a picture frame. Each one should have a unique background image and a button underneath that swaps the image from the frame. Use the traversing functions of jQuery to accomplish this.
+    //
+    //     The rules are the following:
+    //
+    //     The left frame swaps to the right and takes the image from the frame in the center.
+    //     The center frame swaps randomly to either the left or right.
+    //     The right frame swaps to the left and takes the image from the frame in the center.
 </script>
 </body>
 </html>
